I uncommented the youtube links

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 </div>
 <!-- here is the social media link section-->
 
-<!--<iframe width="560" height="315" src="https://www.youtube.com/embed/mz91GfoZ-Zs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
-
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/mz91GfoZ-Zs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
 <iframe width="560" height="315" src="https://www.youtube.com/embed/7kzenzsMLX0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/FBbBWifAdCg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>-->
+<iframe width="560" height="315" src="https://www.youtube.com/embed/FBbBWifAdCg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 <div class="footer">
+    
    
     <div class="social">
     
