fixed the nav button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- <p class="slogan"> Your number one source for organic Pizza</p> -->
     <div class="NavBar"> 
         <ul class="links">
-          <li class="nav-link"><a href="index.html" target="_blank" id= "navLink"><span>Home</span></a></li>
+          <li class="nav-link"><a href="index.html"  id= "navLink"><span>Home</span></a></li>
          <li class="nav-link"><a href="./about.html" id= "navLink">  <span> About </span></a></li>
           <li class="nav-link"><a href="./contact.html"><span>Contact</span></a></li>
       
